--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aluracord - Batman Begins (adrianolima645)",
+    "name": "Aluracord - Batman Begins",
     "theme": {
       "colors": {
         "primary": {
